--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -21,7 +21,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <img src="images/image-qr-code.png" alt="QR code" class="qr-code-image" />
       <div class="content">
         <h1 class="heading">
@@ -32,6 +32,6 @@
           to the next level
         </p>
       </div>
-    </div>
+    </main>
   </body>
 </html>
